@@ -84,7 +84,7 @@
 .darkblue .ui-state-error-text, .darkblue .ui-widget-content .ui-state-error-text, .darkblue .ui-widget-header .ui-state-error-text { color: #ffffff; }
 .darkblue .ui-priority-primary, .darkblue .ui-widget-content .ui-priority-primary, .darkblue .ui-widget-header .ui-priority-primary { font-weight: bold; }
 .darkblue .ui-priority-secondary, .darkblue .ui-widget-content .ui-priority-secondary,  .ui-widget-header .ui-priority-secondary { opacity: .7; filter:Alpha(Opacity=70); font-weight: normal; }
-.darkblue .ui-state-disabled, .darkblue .ui-widget-content .ui-state-disabled, .darkblue .ui-widget-header .ui-state-disabled { opacity: .35; filter:Alpha(Opacity=35); background-image: none; }
+.darkblue .ui-state-disabled, .darkblue .ui-widget-content .ui-state-disabled, .darkblue .ui-widget-header .ui-state-disabled { opacity: .5; filter:Alpha(Opacity=50); background-image: none; }
 
 /* Icons
 ----------------------------------*/
@@ -350,7 +350,7 @@
  *
  * http://docs.jquery.com/UI/Autocomplete#theming
  */
-.darkblue .ui-autocomplete { position: absolute; cursor: default; }	
+.darkblue .ui-autocomplete { position: absolute; cursor: default; }
 
 /* workarounds */
 * html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */
@@ -406,8 +406,8 @@
 .darkblue .ui-button { display: inline-block; position: relative; margin-right: .1em; text-decoration: none !important; cursor: pointer; text-align: center; zoom: 1; overflow: visible; } /* the overflow property removes extra width in IE */
 .darkblue .ui-button-icon-only { width: 2.2em; } /* to make room for the icon, a width needs to be set here */
 button.ui-button-icon-only { width: 2.4em; } /* button elements seem to need a little more width */
-.darkblue .ui-button-icons-only { width: 3.4em; } 
-button.ui-button-icons-only { width: 3.7em; } 
+.darkblue .ui-button-icons-only { width: 3.4em; }
+button.ui-button-icons-only { width: 3.7em; }
 
 /*button text element */
 .darkblue .ui-button .ui-button-text { display: block; line-height: 1.0;  }
@@ -517,7 +517,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .darkblue .ui-datepicker .ui-datepicker-title { margin: 0 2.3em; line-height: 1.8em; text-align: center; }
 .darkblue .ui-datepicker .ui-datepicker-title select { font-size:1em; margin:1px 0; }
 .darkblue .ui-datepicker select.ui-datepicker-month-year {width: 100%;}
-.darkblue .ui-datepicker select.ui-datepicker-month, 
+.darkblue .ui-datepicker select.ui-datepicker-month,
 .darkblue .ui-datepicker select.ui-datepicker-year { width: 49%;}
 .darkblue .ui-datepicker table {width: 100%; font-size: .9em; border-collapse: collapse; margin:0 0 .4em; }
 .darkblue .ui-datepicker th { padding: .7em .3em; text-align: center; font-weight: bold; border: 0;  }
